<resources>
    <string name="app_name" translatable="false">LLA Track</string>
    <string name="title_home">Values</string>
    <string name="title_graph">Graph</string>
    <string name="CanaleNotifica_nome" translatable="false">LLA Finotto</string>
    <string name="text_Latitude">Latitude</string>
    <string name="text_Longitude">Longitude</string>
    <string name="text_Altitude">Altitude</string>
    <string name="text_noData">No Data</string>
    <string name="notifica_titolo">Background Tracking</string>
    <string name="notifica_descrizione">App is tracking Latitude, Longitude and Altitude</string>
    <string name="CanaleNotifica_descrizione">Notifies the background Tracking</string>
    <string name="icon_latitude">icon_Latitude</string>
    <string name="icon_longitude">icon_Longitude</string>
    <string name="icon_altitude">icon_Altitude</string>
    <string name="numericFormat" translatable="false">%.7f</string>
    <string name="imagelatitude">image Latitude</string>
    <string name="imagelongitude">image Longitude</string>
    <string name="imagealtitude">image Altitude</string>
</resources>